--- a/service.html
+++ b/service.html
@@ -62,7 +62,7 @@
                     <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-[#22c55e] opacity-75"></span>
                     <span class="relative inline-flex rounded-full h-2 w-2 bg-[#22c55e]"></span>
                 </span>
-                <span class="text-[10px] uppercase tracking-[0.3em] font-bold text-gray-500">Professional Installation & Maintenance</span>
+                <span class="text-[10px] uppercase tracking-[0.3em] font-bold text-gray-500">Professional Installation</span>
             </div>
 
             <h2 class="text-5xl md:text-7xl font-semibold tracking-tighter text-gray-900 leading-[1.1] mb-8">
@@ -324,3 +324,4 @@
 </body>
 
 </html>
+
