--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </button>
                 </a>
 
-                <a href="#contact" class="inline-flex items-center justify-center gap-3 w-full md:w-auto px-10 py-5 bg-[#22c55e]/5 border border-[#22c55e]/20 text-gray-800 text-sm font-bold uppercase tracking-widest rounded-2xl hover:bg-[#22c55e] hover:text-white transition-all duration-500 group shadow-sm">
+                <a href="contact.html" class="inline-flex items-center justify-center gap-3 w-full md:w-auto px-10 py-5 bg-[#22c55e]/5 border border-[#22c55e]/20 text-gray-800 text-sm font-bold uppercase tracking-widest rounded-2xl hover:bg-[#22c55e] hover:text-white transition-all duration-500 group shadow-sm">
                     <span class="relative flex h-3 w-3">
                         <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-[#22c55e] opacity-75"></span>
                         <span class="relative inline-flex rounded-full h-3 w-3 bg-[#22c55e]"></span>
@@ -95,17 +95,45 @@
                 </a>
             </div>
 
-            <div class="mt-20 flex flex-wrap justify-center gap-8 md:gap-16 opacity-40 grayscale">
-                <div class="flex items-center gap-2">
-                    <span class="text-xs font-bold uppercase tracking-tighter italic text-gray-600">Ultra HD 4K</span>
-                </div>
-                <div class="flex items-center gap-2">
-                    <span class="text-xs font-bold uppercase tracking-tighter italic text-gray-600">AI Detection</span>
-                </div>
-                <div class="flex items-center gap-2">
-                    <span class="text-xs font-bold uppercase tracking-tighter italic text-gray-600">Night Vision</span>
-                </div>
-            </div>
+<div class="mt-20 flex flex-wrap justify-center items-center gap-4 md:gap-8">
+    
+    <div class="group flex items-center gap-4 bg-white/50 backdrop-blur-md px-6 py-3 rounded-2xl border border-gray-100 shadow-[0_4px_20px_-10px_rgba(0,0,0,0.05)] hover:border-[#c27803]/30 hover:bg-white transition-all duration-500">
+        <div class="text-[#c27803] group-hover:scale-110 transition-transform duration-500">
+            <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+            </svg>
+        </div>
+        <div class="flex flex-col">
+            <span class="text-[9px] uppercase tracking-[0.2em] text-[#c27803] font-bold mb-0.5">Resolution</span>
+            <span class="text-xs font-bold tracking-tight text-gray-800">ULTRA HD 4K</span>
+        </div>
+    </div>
+
+    <div class="group flex items-center gap-4 bg-white/50 backdrop-blur-md px-6 py-3 rounded-2xl border border-gray-100 shadow-[0_4px_20px_-10px_rgba(0,0,0,0.05)] hover:border-[#c27803]/30 hover:bg-white transition-all duration-500">
+        <div class="text-[#c27803] group-hover:scale-110 transition-transform duration-500">
+            <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path>
+            </svg>
+        </div>
+        <div class="flex flex-col">
+            <span class="text-[9px] uppercase tracking-[0.2em] text-[#c27803] font-bold mb-0.5">Smart System</span>
+            <span class="text-xs font-bold tracking-tight text-gray-800">AI DETECTION</span>
+        </div>
+    </div>
+
+    <div class="group flex items-center gap-4 bg-white/50 backdrop-blur-md px-6 py-3 rounded-2xl border border-gray-100 shadow-[0_4px_20px_-10px_rgba(0,0,0,0.05)] hover:border-[#c27803]/30 hover:bg-white transition-all duration-500">
+        <div class="text-[#c27803] group-hover:scale-110 transition-transform duration-500">
+            <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
+            </svg>
+        </div>
+        <div class="flex flex-col">
+            <span class="text-[9px] uppercase tracking-[0.2em] text-[#c27803] font-bold mb-0.5">Darkness</span>
+            <span class="text-xs font-bold tracking-tight text-gray-800">NIGHT VISION</span>
+        </div>
+    </div>
+
+</div>
 
         </div>
     </div>
@@ -632,6 +660,7 @@
 
 </body>
 </html>
+
 
 
 
