--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </button>
                 </a>
 
-                <a href="#contact" class="inline-flex items-center justify-center gap-3 w-full md:w-auto px-10 py-4 md:py-5 bg-[#22c55e]/5 border border-[#22c55e]/20 text-gray-800 text-sm font-bold uppercase tracking-widest rounded-2xl hover:bg-[#22c55e] hover:text-white transition-all duration-500 group shadow-sm">
+                <a href="contact.html" class="inline-flex items-center justify-center gap-3 w-full md:w-auto px-10 py-4 md:py-5 bg-[#22c55e]/5 border border-[#22c55e]/20 text-gray-800 text-sm font-bold uppercase tracking-widest rounded-2xl hover:bg-[#22c55e] hover:text-white transition-all duration-500 group shadow-sm">
                     <span class="relative flex h-3 w-3">
                         <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-[#22c55e] opacity-75"></span>
                         <span class="relative inline-flex rounded-full h-3 w-3 bg-[#22c55e]"></span>
@@ -660,6 +660,7 @@
 
 </body>
 </html>
+
 
 
 
