--- a/order.html
+++ b/order.html
@@ -142,7 +142,7 @@
                         <img src="service/homeimage/comingsoon.jpg" class="w-full h-full object-cover" onerror="this.src='https://via.placeholder.com/150'">
                     </div>
                     <div class="flex flex-col">
-                        <span class="text-[10px] font-black text-cyan-600 uppercase tracking-widest mb-1">สินค้า Pre-order</span>
+                        <span class="text-[10px] font-black text-cyan-600 uppercase tracking-widest mb-1">สินค้า Pre-order ใช้เวลาจัดส่ง 3-5 วันทำการ</span>
                         <h4 class="text-base font-black text-slate-800 leading-tight mb-1">Hikvision ColorVu 4MP</h4>
                         <p class="text-xs text-slate-400 font-medium italic">ชุดโปรโมชั่น 4 กล้อง</p>
                         <p class="text-lg font-black text-slate-900 mt-2">฿15,900</p>
@@ -183,7 +183,7 @@
                 
                 <div class="mt-8 flex items-center justify-center gap-2 text-slate-400">
                     <svg class="w-3.5 h-3.5 text-cyan-500" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M2.166 4.999A11.954 11.954 0 0010 1.944 11.954 11.954 0 0017.834 5c.11.65.166 1.32.166 2.001 0 5.225-3.34 9.67-8 11.317C5.34 16.67 2 12.225 2 7c0-.682.057-1.35.166-2.001zm11.541 3.708a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                    <p class="text-[10px] font-bold uppercase tracking-widest">ทางร้านจะติดต่อกลับและยืนยันคำสั่งซื้อภายใน 24 ชม.<br> สินค้า Pre-Order ใช้เวลาจัดส่ง 3-5 วันทำการ</p>
+                    <p class="text-[10px] font-bold uppercase tracking-widest">ทางร้านจะติดต่อกลับและยืนยันคำสั่งซื้อภายใน 24 ชม.
                 </div>
 				
 
