--- a/order.html
+++ b/order.html
@@ -303,7 +303,7 @@
     </div>
 
     <div class="w-14 h-14 bg-white rounded-2xl shadow-sm border border-slate-50 flex items-center justify-center p-1 shrink-0">
-        <img src="productimage/dpd.avif" alt="DBD Registered" class="w-full h-auto object-contain grayscale group-hover:grayscale-0 transition-all duration-500">
+        <img src="productimage/P0001/dpd.avif" alt="DBD Registered" class="w-full h-auto object-contain grayscale group-hover:grayscale-0 transition-all duration-500">
     </div>
 
     <div class="flex flex-col">
@@ -424,7 +424,7 @@ function previewImage(event) {
 
 // 5. จัดการส่งฟอร์มไปยัง Google Apps Script
 const checkoutForm = document.getElementById('checkout-form');
-const scriptURL = 'https://script.google.com/macros/s/AKfycbyQrs0xx6U7iKdmebH9lQ7ro8_0tOup4E84lW9-WW7NIx21dcCxTd1LVdWfwtJfrKX5/exec';
+const scriptURL = 'https://script.google.com/macros/s/AKfycbyCB7eaOoD1tEZzSOck8Dd6SHUMhrGoTYHFr62jvn4EePW8IrM2v0kgbNtpYf4dKgA/exec';
 
 if (checkoutForm) {
     checkoutForm.onsubmit = async (e) => {
