--- a/index.html
+++ b/index.html
@@ -328,7 +328,10 @@
                 </div>
 
                 <div class="flex gap-3 mt-8">
-                    <button onclick="window.print()" class="flex-1 border-2 border-slate-200 text-slate-500 font-bold py-3.5 rounded-2xl text-sm hover:bg-slate-50 transition-all">บันทึกรูปตั๋ว</button>
+                                        <button onclick="window.print()" 
+    class="flex-1 relative z-10 border-2 border-slate-200 text-slate-500 font-bold py-3.5 rounded-2xl text-sm hover:bg-slate-50 transition-all cursor-pointer active:bg-slate-100">
+    บันทึกรูปตั๋ว
+</button>
                     <button onclick="location.reload()" class="flex-1 bg-indigo-600 text-white font-bold py-3.5 rounded-2xl text-sm shadow-lg shadow-indigo-100 hover:bg-indigo-700 transition-all">กลับหน้าแรก</button>
                 </div>
             </div>
@@ -348,3 +351,4 @@
 <script src="booking.js"></script>
 </body>
 </html>
+
