--- a/index.html
+++ b/index.html
@@ -491,11 +491,18 @@
     class="flex-1 relative z-10 border-2 border-slate-200 text-slate-500 font-bold py-3.5 rounded-2xl text-sm hover:bg-slate-50 transition-all cursor-pointer active:bg-slate-100">
     บันทึกรูปตั๋ว
 </button>
+<button onclick="shareToLine('SCU-JE7M90R1D', '17:00', '24 ม.ค. 2026')" 
+    class="flex-1 bg-[#00B900] text-white font-bold py-3.5 rounded-2xl text-sm hover:bg-[#009900] transition-all flex items-center justify-center gap-2">
+    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M24 10.304c0-5.369-5.383-9.738-12-9.738-6.616 0-12 4.369-12 9.738 0 4.814 4.269 8.846 10.036 9.608.391.084.922.258 1.057.592.121.303.079.778.039 1.085l-.171 1.027c-.052.303-.242 1.186 1.046.647 1.287-.539 6.942-4.09 9.467-6.992C23.231 14.964 24 12.775 24 10.304z"/></svg>
+    ส่งเข้า LINE
+</button>
                     <button onclick="location.reload()" class="flex-1 bg-indigo-600 text-white font-bold py-3.5 rounded-2xl text-sm shadow-lg shadow-indigo-100 hover:bg-indigo-700 transition-all">กลับหน้าแรก</button>
                 </div>
             </div>
         </div>
     </div>
+	
+
 
     <div id="summary-bar" class="fixed bottom-0 left-0 right-0 bg-white/90 backdrop-blur-md shadow-[0_-10px_30px_rgba(0,0,0,0.08)] p-5 z-40 transform translate-y-full transition-all duration-300">
         <div class="max-w-md mx-auto flex justify-between items-center px-4">
