--- a/index.html
+++ b/index.html
@@ -486,18 +486,23 @@
                     <p class="text-lg font-mono font-bold text-indigo-600" id="res-id">SCU-XXXX-XXXX</p>
                 </div>
 
-                <div class="flex gap-3 mt-8">
-<button onclick="downloadTicketImage()" 
-    class="flex-1 relative z-10 border-2 border-slate-200 text-slate-500 font-bold py-3.5 rounded-2xl text-sm hover:bg-slate-50 transition-all cursor-pointer active:bg-slate-100">
-    บันทึกรูปตั๋ว
-</button>
-<button onclick="shareToLine('SCU-JE7M90R1D', '17:00', '24 ม.ค. 2026')" 
-    class="flex-1 bg-[#00B900] text-white font-bold py-3.5 rounded-2xl text-sm hover:bg-[#009900] transition-all flex items-center justify-center gap-2">
-    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M24 10.304c0-5.369-5.383-9.738-12-9.738-6.616 0-12 4.369-12 9.738 0 4.814 4.269 8.846 10.036 9.608.391.084.922.258 1.057.592.121.303.079.778.039 1.085l-.171 1.027c-.052.303-.242 1.186 1.046.647 1.287-.539 6.942-4.09 9.467-6.992C23.231 14.964 24 12.775 24 10.304z"/></svg>
-    ส่งเข้า LINE
-</button>
-                    <button onclick="location.reload()" class="flex-1 bg-indigo-600 text-white font-bold py-3.5 rounded-2xl text-sm shadow-lg shadow-indigo-100 hover:bg-indigo-700 transition-all">กลับหน้าแรก</button>
-                </div>
+<div class="flex flex-col sm:flex-row gap-3 mt-8" data-html2canvas-ignore>
+    <button onclick="downloadTicketImage()" 
+        class="w-full sm:flex-1 relative z-10 border-2 border-slate-200 text-slate-500 font-bold py-3.5 rounded-2xl text-sm hover:bg-slate-50 transition-all cursor-pointer active:bg-slate-100 order-2 sm:order-1">
+        บันทึกรูปตั๋ว
+    </button>
+
+    <button onclick="shareToLine()" 
+        class="w-full sm:flex-1 bg-[#00B900] text-white font-bold py-3.5 rounded-2xl text-sm hover:bg-[#009900] transition-all flex items-center justify-center gap-2 order-3 sm:order-2">
+        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M24 10.304c0-5.369-5.383-9.738-12-9.738-6.616 0-12 4.369-12 9.738 0 4.814 4.269 8.846 10.036 9.608.391.084.922.258 1.057.592.121.303.079.778.039 1.085l-.171 1.027c-.052.303-.242 1.186 1.046.647 1.287-.539 6.942-4.09 9.467-6.992C23.231 14.964 24 12.775 24 10.304z"/></svg>
+        ส่งเข้า LINE
+    </button>
+
+    <button onclick="location.reload()" 
+        class="w-full sm:flex-1 bg-indigo-600 text-white font-bold py-3.5 rounded-2xl text-sm shadow-lg shadow-indigo-100 hover:bg-indigo-700 transition-all order-1 sm:order-3">
+        กลับหน้าแรก
+    </button>
+</div>
             </div>
         </div>
     </div>
