--- a/index.html
+++ b/index.html
@@ -203,10 +203,22 @@
 
 <nav class="bg-white/80 backdrop-blur-md shadow-sm sticky top-0 z-50">
         <div class="max-w-6xl mx-auto px-4 py-3 flex justify-between items-center">
-            <div class="flex items-center gap-3 cursor-pointer" onclick="showSearchPage()">
-                <div class="w-10 h-10 brand-gradient rounded-xl flex items-center justify-center text-white font-bold shadow-lg shadow-indigo-200">ส</div>
-                <span class="text-xl font-bold tracking-tight text-slate-800">สงวนชัยอุบล</span>
-            </div>
+<div class="flex items-center gap-3 cursor-pointer group" onclick="showSearchPage()">
+    <div class="relative w-11 h-11 flex items-center justify-center">
+        <div class="absolute inset-0 brand-gradient rounded-xl shadow-lg shadow-indigo-200 transition-transform group-hover:scale-105"></div>
+        
+        <div class="relative flex flex-col items-center justify-center text-white leading-none">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mb-0.5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M8 7h8m-8 4h8m-9 8h10M5 3a2 2 0 00-2 2v11a2 2 0 002 2h14a2 2 0 002-2V5a2 2 0 00-2-2H5zM7 19v2m10-2v2" />
+            </svg>
+        </div>
+    </div>
+
+    <div class="flex flex-col">
+        <span class="text-xl font-extrabold tracking-tight text-slate-800 leading-tight">สงวนชัยอุบล</span>
+        <span class="text-[10px] font-bold text-indigo-500 uppercase tracking-[0.2em] leading-none">Sanguanchai</span>
+    </div>
+</div>
             <div id="stepper" class="flex gap-6 text-[10px] md:text-xs font-semibold text-slate-400 uppercase tracking-widest">
                 <span id="step-1-label" class="stepper-active pb-1">1. เลือกเที่ยวรถ</span>
                 <span id="step-2-label" class="pb-1">2. เลือกที่นั่ง</span>
