--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomePro Concept - Premium Shop</title>
+    <title>Khuang Nai Tech Hub - Premium Shop</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -27,11 +27,18 @@
 
 <nav class="glass-nav shadow-sm sticky top-0 z-40 border-b border-gray-100">
     <div class="container mx-auto px-4 py-4 flex items-center justify-between">
-        <div class="flex items-center gap-8">
-            <div class="text-2xl font-black tracking-tighter cursor-pointer group" onclick="window.location.reload()">
-                <span class="text-orange-600 group-hover:text-orange-500 transition-colors">HOME</span><span class="text-[#002D72]">PRO</span>
+<div class="flex items-center gap-8">
+    <div class="cursor-pointer group select-none" onclick="window.location.reload()">
+        <div class="flex items-center">
+            <span class="bg-[#002D72] text-white px-3 py-1 rounded-l-md font-black italic text-2xl group-hover:bg-orange-600 transition-colors">KN</span>
+            <div class="border-2 border-[#002D72] px-3 py-1 rounded-r-md font-bold text-2xl flex gap-1">
+                <span class="text-[#002D72]">Tech</span>
+                <span class="text-orange-600">Hub</span>
             </div>
         </div>
+        <p class="text-[10px] text-gray-400 uppercase tracking-[0.2em] mt-1 font-bold ml-1">Khuang Nai Professional IT</p>
+    </div>
+</div>
         
         <div class="flex items-center gap-3 sm:gap-6">
             <div id="admin-menu" class="hidden flex items-center gap-4 border-r pr-4 border-gray-200">
@@ -64,8 +71,8 @@
 
 <header class="bg-white border-b overflow-hidden">
     <div class="container mx-auto px-4 py-10 md:py-16 text-center">
-        <h1 class="text-4xl md:text-5xl font-extrabold text-[#002D72] mb-4">ตกแต่งบ้านในฝันของคุณ</h1>
-        <p class="text-slate-500 max-w-lg mx-auto mb-8">พบกับสินค้าคุณภาพพรีเมียมสำหรับบ้าน ราคามิตรภาพ พร้อมโปรโมชั่นพิเศษวันนี้</p>
+        <h1 class="text-4xl md:text-5xl font-extrabold text-[#002D72] mb-4">Redefining Your Digital Lifestyle.</h1>
+        <p class="text-slate-500 max-w-lg mx-auto mb-8">เปลี่ยนโลกเทคโนโลยีให้เป็นเรื่องง่ายด้วยอุปกรณ์ที่ดีที่สุดจาก เขื่องใน Tech Hub</p>
         
         <div class="max-w-2xl mx-auto relative">
             <i class="fa-solid fa-magnifying-glass absolute left-5 top-1/2 -translate-y-1/2 text-slate-400"></i>
@@ -109,11 +116,11 @@
             <div id="modal-thumbnails" class="flex gap-3 mt-6 overflow-x-auto py-2 custom-scrollbar justify-center"></div>
         </div>
         <div class="md:w-2/5 p-8 md:p-12 flex flex-col bg-white">
-            <div class="hidden md:flex justify-end mb-4">
-                <button onclick="closeProductModal()" class="text-slate-400 hover:text-slate-600 transition-colors">
-                    <i class="fa-solid fa-xmark text-2xl"></i>
-                </button>
-            </div>
+<div class="flex justify-end mb-4 md:flex">
+    <button onclick="closeProductModal()" class="text-slate-400 hover:text-slate-600 transition-colors">
+        <i class="fa-solid fa-xmark text-2xl"></i>
+    </button>
+</div>
             <span class="text-orange-600 font-bold text-sm tracking-widest uppercase mb-2">New Arrival</span>
             <h2 id="modal-title" class="text-3xl font-bold text-slate-900 leading-tight mb-4"></h2>
             <p id="modal-price" class="text-4xl font-black text-[#002D72] mb-8"></p>
@@ -183,6 +190,10 @@
             <div class="space-y-1">
                 <label class="text-xs font-bold text-slate-400 uppercase ml-1">เบอร์โทรศัพท์</label>
                 <input type="tel" id="cust_phone" maxlength="10" oninput="this.value = this.value.replace(/[^0-9]/g, '')" class="w-full border-gray-100 bg-slate-50 border rounded-xl p-4 outline-none focus:ring-2 focus:ring-orange-500 transition-all">
+            </div>
+            <div class="space-y-1">
+                <label class="text-xs font-bold text-slate-400 uppercase ml-1">ที่อยู่จัดส่ง</label>
+                <input type="text" id="cust_address" class="w-full border-gray-100 bg-slate-50 border rounded-xl p-4 outline-none focus:ring-2 focus:ring-orange-500 transition-all">
             </div>
             <div class="bg-orange-50 p-6 rounded-2xl flex justify-between items-center border border-orange-100 mt-4">
                 <span class="font-bold text-orange-900">รวมที่ต้องชำระ:</span>
@@ -438,13 +449,14 @@
     async function submitOrder() {
         const name = document.getElementById('cust_name').value.trim();
         const phone = document.getElementById('cust_phone').value.trim();
+		const address = document.getElementById('cust_address').value.trim();
         const btn = document.getElementById('btn-submit');
         if (!name || phone.length < 9) return alert("กรุณากรอกข้อมูลผู้รับให้ครบถ้วน");
         btn.disabled = true;
         btn.innerText = "กำลังดำเนินการ...";
         const totalAmount = cart.reduce((sum, item) => sum + (Number(item.price) * item.quantity), 0);
         try {
-            const { error } = await _supabase.from('orders').insert([{ customer_name: name, customer_phone: phone, total_amount: totalAmount, items: cart }]);
+            const { error } = await _supabase.from('orders').insert([{ customer_name: name, customer_phone: phone, customer_address: address, total_amount: totalAmount, items: cart }]);
             if (error) throw error;
             alert("ขอบคุณที่ไว้วางใจ! เราได้รับคำสั่งซื้อของคุณแล้ว");
             cart = [];
