--- a/admin-products.html
+++ b/admin-products.html
@@ -92,7 +92,7 @@
                         </div>
 
                         <div>
-                            <label class="block text-[11px] font-bold text-slate-400 uppercase tracking-wider mb-2 ml-1">รูปภาพ (สูงสุด 3 URL)</label>
+                            <label class="block text-[11px] font-bold text-slate-400 uppercase tracking-wider mb-2 ml-1">รูปภาพ (สูงสุด 5 URL)</label>
                             <div class="space-y-3" id="image-inputs-container">
                                 <div class="relative group">
                                     <input type="url" class="p-image-input w-full bg-slate-50 border border-slate-200 rounded-xl p-3 pl-10 text-sm focus:border-orange-500 outline-none transition-all" placeholder="URL รูปหลัก (Cover)" required>
@@ -104,6 +104,14 @@
                                 </div>
                                 <div class="relative group">
                                     <input type="url" class="p-image-input w-full bg-slate-50 border border-slate-200 rounded-xl p-3 pl-10 text-sm focus:border-orange-500 outline-none transition-all" placeholder="URL รูปที่ 3">
+                                    <i class="fa-solid fa-link absolute left-4 top-4 text-slate-300"></i>
+                                </div>
+								<div class="relative group">
+                                    <input type="url" class="p-image-input w-full bg-slate-50 border border-slate-200 rounded-xl p-3 pl-10 text-sm focus:border-orange-500 outline-none transition-all" placeholder="URL รูปที่ 4">
+                                    <i class="fa-solid fa-link absolute left-4 top-4 text-slate-300"></i>
+                                </div>
+								<div class="relative group">
+                                    <input type="url" class="p-image-input w-full bg-slate-50 border border-slate-200 rounded-xl p-3 pl-10 text-sm focus:border-orange-500 outline-none transition-all" placeholder="URL รูปที่ 5">
                                     <i class="fa-solid fa-link absolute left-4 top-4 text-slate-300"></i>
                                 </div>
                             </div>
