--- a/admin-orders.html
+++ b/admin-orders.html
@@ -361,6 +361,17 @@
     fetchOrders();
     // Auto Refresh every 30s
     setInterval(fetchOrders, 30000);
+	
+	
+			// ใส่โค้ดนี้ในหน้า Admin ทุกหน้า
+_supabase.auth.onAuthStateChange((event, session) => {
+    const adminEmail = "akrapol2017@hotmail.com";
+    
+    if (!session || session.user.email !== adminEmail) {
+        alert("คุณไม่มีสิทธิ์เข้าถึงหน้านี้");
+        window.location.href = "index.html"; // เด้งกลับหน้าแรก
+    }
+});
 </script>
 
 </body>
