--- a/admin-products.html
+++ b/admin-products.html
@@ -303,6 +303,16 @@
         // Init
         fetchCategories();
         fetchProducts();
+		
+		// ใส่โค้ดนี้ในหน้า Admin ทุกหน้า
+_supabase.auth.onAuthStateChange((event, session) => {
+    const adminEmail = "akrapol2017@hotmail.com";
+    
+    if (!session || session.user.email !== adminEmail) {
+        alert("คุณไม่มีสิทธิ์เข้าถึงหน้านี้");
+        window.location.href = "index.html"; // เด้งกลับหน้าแรก
+    }
+});
     </script>
 </body>
 </html>
